packages/taquito-michel-codec/test/contracts_008/ill_typed/ticket_dup.tz
parameter (ticket %store nat) ;
storage unit;
code { UNPAIR; DUP; DROP 2; NIL operation; PAIR }
